AC_INIT
AC_CONFIG_SRCDIR([src/statelessjniloader.c])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SUBDIRS(libltdl)

AC_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
AC_LIBLTDL_CONVENIENCE
AC_PROG_LIBTOOL
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)


AC_PROG_CC
AC_LANG_C

dnl AC_CANONICAL_BUILD
dnl AC_CANONICAL_HOST
dnl AC_CANONICAL_TARGET

AC_PROG_MAKE_SET
AC_PROG_INSTALL

AM_INIT_AUTOMAKE("statelessjniloader", 0.0.1)
AM_PROG_LIBTOOL

dnl JNI section
JAVAC=javac
AC_ARG_WITH(javac,[  --with-javac=JAVAC       Path to javac],JAVAC=$withval,)
AC_JNI_INCLUDE_DIR
for JNI_INCLUDE_DIR in $JNI_INCLUDE_DIRS
do
  CPPFLAGS="$CPPFLAGS -I$JNI_INCLUDE_DIR"
done
AC_CHECK_HEADER(jni.h,,AC_MSG_ERROR(jni not found))
JMODSUFFIX_CONFIG

dnl OS X JNI install location kludge
if test `uname` = "Darwin"; then
  libdir="/Library/Java/Extensions"
fi

AC_CONFIG_FILES([Makefile src/Makefile],)
AC_OUTPUT
